syntax = "proto3";
package comp41720.cinequest.grpc;
import "google/protobuf/empty.proto";

option java_package = "comp41720.cinequest.grpc";
option java_outer_classname = "AchievementServiceProto";

service AchievementService {
  rpc NotifyRatingSubmitted(NotifyRatingRequest) returns (google.protobuf.Empty);
}

message NotifyRatingRequest {
  string user_id = 1;
  int32 movie_id = 2;
  int64 total_ratings = 3;
}